# goldshi

./: .gitignore  README.md  feh_295389_000001_out  pyproject.toml
src/goldshi/: __init__.py  cli.py  hello.py  helper.py  photo.py
tests/: test_color_convert.py  test_hello.py  test_ppm.py
