[project]
name = "goldshi"
version = "0.2.0"
description = "Simple CLI image manipulation"
readme = "README.md"
authors = [
    { name = "saubuny", email = "saubuny@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
goldshi = "goldshi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
